# FortranSemantics

./: install_deps_from_github.sh  pyproject.toml
doc/: 01-design-overview.md
examples/basic/: cfg.mod  forge.toml  init.py
examples/basic/.forge/: forge.sqlite3
examples/basic/.forge/asts/src/: constants_mod.f90.ast  geometry_mod.f90.ast  physics_mod.f90.ast  vector_mod.f90.ast
examples/basic/.forge/json/src/: cfg_test.f90.json  constants_mod.f90.json  geometry_mod.f90.json  physics_mod.f90.json  vector_mod.f90.json
examples/basic/src/: cfg_test.f90  constants_mod.f90  geometry_mod.f90  physics_mod.f90  vector_mod.f90  vector_mod.mod
src/FortranSemantics/data_models/fortran/: attr_spec.py  derived_type_definition.py  io_calls.py  signature.py  subprogram_summary.py
src/FortranSemantics/database/repository/: query_handle.py
src/FortranSemantics/keys/: base.py  module_decl.py  subprogram.py  subprogram_decl.py
src/FortranSemantics/tasks/parse/: load.py
src/FortranSemantics/tasks/parse/transform/attrs/: __init__.py  process_attr_specs.py
src/FortranSemantics/tasks/parse/transform/scope/: derived_type_definition_table.py  symbol_table.py
src/FortranSemantics/tasks/parse/transform/unit/: calls.py  reference_summary.py
src/FortranSemantics/tasks/parse/transform/utils/: __init__.py  get_execution_part.py  is_iterable.py
src/forge/cli/: main.py
src/forge/cli/commands/: clean.py  extract.py  init.py  load.py  resolve.py  status.py  transform.py
src/forge/config/: __init__.py  loader.py  models.py
src/forge/core/: schema.py
src/forge/core/models/: enums.py  semantics.py  state.py  transform_result.py
src/forge/data_models/fortran/: __init__.py  calls.py  declared_component.py  declared_entity.py  formal_parameter.py  reference_entry.py  reference_summary.py  transform_results.py  type.py
src/forge/database/repository/: bulk_handle.py
src/forge/database/schema/: fortrans.py
src/forge/keys/: __init__.py  module.py  regex_patterns.py
src/forge/tasks/parse/: extract.py
src/forge/tasks/parse/load/: bulk_handle.py  load.py  query_handle.py
src/forge/tasks/parse/transform/attrs/: process_array_spec.py  process_attr_specs.py  process_type_spec.py
src/forge/tasks/parse/transform/scope/: __init__.py  base.py  call_table.py  derived_type_definition_table.py  io_table.py  reference_table.py  signature.py  symbol_table.py  used_modules.py
src/forge/tasks/resolve/: __init__.py  add_result_var.py  base.py  parse_callee.py  update.py
src/forge/tasks/resolve/handles/: __init__.py  command_handle.py  query_handle.py
tests/: conftest.py  helpers.py  test_cli_extract.py  test_cli_load.py  test_cli_resolve.py  test_cli_transform.py
tests/cli/: test_clean.py
tests/parse/transform/attrs/: test_process_array_spec.py  test_process_attr_specs.py  test_process_type_declaration_stmt.py  test_process_type_spec.py
tests/parse/transform/scope/: test_call_table.py  test_io_table.py  test_reference_table.py  test_signature.py  test_symbol_table.py
tests/parse/transform/unit/: test_construct_from_assignment_stmt.py  test_construct_from_call_stmt.py  test_construct_from_designator.py  test_construct_from_expression.py  test_declared_entity.py  test_derived_type_definition.py
(+10 files in other folders)
